Fix spacing below title on index page

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,6 +1,6 @@
 body.index {
 	> header {
-		padding: 2.5em 0 1em 0;
+		padding: 2.5em 0 0 0;
 		background-color: $bgcolor;
 		border-top: 8px solid $bgcolor-running;
 		text-align: center;
